2004-12-23  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/disco.py:
	* src/utils.py:
	* src/tlib/oscar.py:
	* src/tlib/countrycodes.py:
	* src/legacy/icqt.py:
	Jonas Adahl's patches for better vcards support.

	* src/tlib:
	Many updates to clean up and add new requirements.

	* src/disco.py:
	* src/groupchat.py:
	* src/jabw.py:
	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	* src/main.py:
	* src/misciq.py:
	* src/register.py:
	* src/xdb.py:
	Updated to match recent MSN code more accurately.

2004-12-20  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	Applied endian patch from Jonas Adahl.

2004-12-14  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/jabw.py:
	Applied patch to messageIDs handling as suggested by macbar.

2004-12-13  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	Fixed html translation issue with ".

	* src/session.py:
	* src/register.py:
	* src/legacy/oscar/glue.py:
	* src/legacy/toc/glue.py:
	Removed references to unused nicknames.

2004-12-05  Daniel Henninger  <jadestorm@nc.rr.com>

	* PyAIMt:
	* src/groupchat.py:
	* src/jabw.py:
	* src/utils.py:
	* src/session.py:
	* src/legacy/oscar/glue.py:
	* src/legacy/toc/glue.py:
	* src/xdb.py:
	Ported PyMSNt changes to check for pid file, add typing notifications,
	memory leak fixes, etc.  Based around PyMSN-t 0.8 upgrades.

2004-12-01  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	* src/legacy/icqt.py:
	Adding handling for retrieving offline messages.

2004-11-30  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/register.py:
	Changed username to be lowercased in registration.

	* src/legacy/icqt.py:
	Changed encoding type to iso-8859-1 for testing.

2004-11-28  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/session.py:
	* src/legacy/icqt.py:
	Added handling for /registered.

2004-11-27  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/disco.py:
	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	* src/tlib/oscar.py: