@@ -1,3 +1,14 @@
+2004-12-25  Daniel Henninger  <jadestorm@nc.rr.com>
+
+	* src/lang.py:
+	Applied new dutch translation.
+
+	* src/legacy/icqt.py:
+	Applied patch to have transport subscribe back to users.
+
+	* src/register.py:
+	Applied patch from Magnus Henoch to fix ejabberd issues.
+
 2004-12-23  Daniel Henninger  <jadestorm@nc.rr.com>
 
 	* src/disco.py:
